demo v0.0.2 接上前端，改用json方式传值

--- a/webapp/html/blockview.html
+++ b/webapp/html/blockview.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Block View</title>
+    <link href="./../css/blockview.css" rel="stylesheet">
 </head>
 <body>
+<ul id="block_list">
 
+</ul>
 </body>
+<script src="./../js/jquery.min.js"></script>
+<script src="./../js/blockview.js"></script>
 </html>
