demo v0.0.3 修复之前的一些小bug，前端基本能用。

--- a/webapp/html/singleBlock.html
+++ b/webapp/html/singleBlock.html
@@ -11,7 +11,6 @@
     <table>
         <tr>
             <th>Summary</th>
-            <th></th>
         </tr>
         <tr>
             <td>
@@ -60,6 +59,16 @@
             <td>
                 <p><span id="bmtroot"></span></p>
             </td>
+        </tr>
+    </table>
+    <br >
+    <h3>Transactions</h3>
+    <table id="txList">
+        <tr>
+            <th>ID</th>
+            <th>USER</th>
+            <th>DOC</th>
+            <th>Data</th>
         </tr>
 
     </table>
