--- a/webapp/html/singleBlock.html
+++ b/webapp/html/singleBlock.html
@@ -17,7 +17,7 @@
                 <p>height</p>
             </td>
             <td>
-                <p><span id="bindex"></span></p>
+                <p><span id="bindex2"></span></p>
             </td>
         </tr>
         <tr>
@@ -66,8 +66,8 @@
     <table id="txList">
         <tr>
             <th>ID</th>
-            <th>USER</th>
-            <th>DOC</th>
+            <th>From</th>
+            <th>To</th>
             <th>Data</th>
         </tr>
 
